# serializer version: 1
# name: test_ft_prescriber_with_no_ft_organization
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  En tant qu’agent France Travail vous devez appartenir à une agence pour vous connecter aux Emplois de l’inclusion.
              </p>
              <p>
                  Veuillez vous faire inviter par un collaborateur de votre agence afin d’accéder au service.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_employers_with_inactive_company
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  Afin de garantir un fonctionnement optimal, l’accès aux fonctionnalités professionnelles est restreint aux comptes associés à une structure active.
              </p>
              <h3>
                  Pourquoi mon compte n’est pas ou plus rattaché à l’espace de travail de mon organisation ?
              </h3>
              <ul>
                  <li>
                      Nous avons constaté qu’un grand nombre de professionnels effectuaient sans le savoir leurs démarches sans être associés à leur structure.
                                  Votre compte n’a donc peut-être jamais été rattaché à l’espace de travail de votre organisation.
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure, celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
              </ul>
              <h3>
                  Comment rejoindre l’espace de travail de votre organisation ?
              </h3>
              <ul>
                  <li>
                      Si l’espace de travail de votre organisation existe déjà et que vos collègues y sont rattachés, veuillez leur demander de vous envoyer une invitation (
                      <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14738409239825--Ajouter-mes-collaborateurs-sur-le-compte-de-ma-structure" target="_blank">
                          lien vers la documenation
                      </a>
                      )
                  </li>
                  <li>
                      Si l’espace de travail de votre organisation n’existe pas encore ou qu’aucun de vos collègues n’y est inscrit, veuillez
                      <a class="btn-link" href="/signup/professional/kind">
                          cliquer ici
                      </a>
                      .
                  </li>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
              </ul>
              <p>
                  En cas de difficultés, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  . Veuillez noter que la procédure de rattachement via le support technique nécessitera plus de temps car des vérifications sont nécessaires afin de nous assurer de votre lien avec l’organisation concernée.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_pro_without_organization
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  Afin de garantir un fonctionnement optimal, l’accès aux fonctionnalités professionnelles est restreint aux comptes associés à une structure active.
              </p>
              <h3>
                  Pourquoi mon compte n’est pas ou plus rattaché à l’espace de travail de mon organisation ?
              </h3>
              <ul>
                  <li>
                      Nous avons constaté qu’un grand nombre de professionnels effectuaient sans le savoir leurs démarches sans être associés à leur structure.
                                  Votre compte n’a donc peut-être jamais été rattaché à l’espace de travail de votre organisation.
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure, celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
              </ul>
              <h3>
                  Comment rejoindre l’espace de travail de votre organisation ?
              </h3>
              <ul>
                  <li>
                      Si l’espace de travail de votre organisation existe déjà et que vos collègues y sont rattachés, veuillez leur demander de vous envoyer une invitation (
                      <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14738409239825--Ajouter-mes-collaborateurs-sur-le-compte-de-ma-structure" target="_blank">
                          lien vers la documenation
                      </a>
                      )
                  </li>
                  <li>
                      Si l’espace de travail de votre organisation n’existe pas encore ou qu’aucun de vos collègues n’y est inscrit, veuillez
                      <a class="btn-link" href="/signup/professional/kind">
                          cliquer ici
                      </a>
                      .
                  </li>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
              </ul>
              <p>
                  En cas de difficultés, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  . Veuillez noter que la procédure de rattachement via le support technique nécessitera plus de temps car des vérifications sont nécessaires afin de nous assurer de votre lien avec l’organisation concernée.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_pro_without_organization.1
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  Afin de garantir un fonctionnement optimal, l’accès aux fonctionnalités professionnelles est restreint aux comptes associés à une structure active.
              </p>
              <h3>
                  Pourquoi mon compte n’est pas ou plus rattaché à l’espace de travail de mon organisation ?
              </h3>
              <ul>
                  <li>
                      Nous avons constaté qu’un grand nombre de professionnels effectuaient sans le savoir leurs démarches sans être associés à leur structure.
                                  Votre compte n’a donc peut-être jamais été rattaché à l’espace de travail de votre organisation.
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure, celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
              </ul>
              <h3>
                  Comment rejoindre l’espace de travail de votre organisation ?
              </h3>
              <ul>
                  <li>
                      Si l’espace de travail de votre organisation existe déjà et que vos collègues y sont rattachés, veuillez leur demander de vous envoyer une invitation (
                      <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14738409239825--Ajouter-mes-collaborateurs-sur-le-compte-de-ma-structure" target="_blank">
                          lien vers la documenation
                      </a>
                      )
                  </li>
                  <li>
                      Si l’espace de travail de votre organisation n’existe pas encore ou qu’aucun de vos collègues n’y est inscrit, veuillez
                      <a class="btn-link" href="/signup/professional/kind">
                          cliquer ici
                      </a>
                      .
                  </li>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
              </ul>
              <p>
                  En cas de difficultés, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  . Veuillez noter que la procédure de rattachement via le support technique nécessitera plus de temps car des vérifications sont nécessaires afin de nous assurer de votre lien avec l’organisation concernée.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
# name: tests_pro_without_organization.2
  '''
  <div class="s-section__container container">
      <div class="s-section__row row g-0">
          <div class="s-section__col col-12 col-lg-2 bg-lg-white">
              <img alt="" class="img-fluid" loading="lazy" src="/static/img/illustration-error.png"/>
          </div>
          <div class="s-section__col col-12 col-lg-10 bg-lg-white">
              <p>
                  Afin de garantir un fonctionnement optimal, l’accès aux fonctionnalités professionnelles est restreint aux comptes associés à une structure active.
              </p>
              <h3>
                  Pourquoi mon compte n’est pas ou plus rattaché à l’espace de travail de mon organisation ?
              </h3>
              <ul>
                  <li>
                      Nous avons constaté qu’un grand nombre de professionnels effectuaient sans le savoir leurs démarches sans être associés à leur structure.
                                  Votre compte n’a donc peut-être jamais été rattaché à l’espace de travail de votre organisation.
                  </li>
                  <li>
                      Si votre compte était précédemment rattaché à une structure, celle-ci peut être désormais inactive (par exemple en cas de déconventionnement).
                  </li>
                  <li>
                      Si vous avez tenté de vous inscrire en tant que facilitateur des clauses sociales, votre statut est actuellement en cours de vérification, nous reviendrons vers vous dans les plus brefs délais.
                  </li>
              </ul>
              <h3>
                  Comment rejoindre l’espace de travail de votre organisation ?
              </h3>
              <ul>
                  <li>
                      Si l’espace de travail de votre organisation existe déjà et que vos collègues y sont rattachés, veuillez leur demander de vous envoyer une invitation (
                      <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr/articles/14738409239825--Ajouter-mes-collaborateurs-sur-le-compte-de-ma-structure" target="_blank">
                          lien vers la documenation
                      </a>
                      )
                  </li>
                  <li>
                      Si l’espace de travail de votre organisation n’existe pas encore ou qu’aucun de vos collègues n’y est inscrit, veuillez
                      <a class="btn-link" href="/signup/professional/kind">
                          cliquer ici
                      </a>
                      .
                  </li>
                  <li>
                      Si vous avez changé d’adresse e-mail et que vous souhaitez retrouver l’accès à votre compte existant, vous pouvez utiliser
                      <a class="btn-link" href="https://tally.so/r/npPpNq">
                          ce formulaire d’aide
                      </a>
                      .
                  </li>
              </ul>
              <p>
                  En cas de difficultés, vous pouvez
                  <a class="btn-link has-external-link" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr" target="_blank">
                      contacter notre support technique
                  </a>
                  . Veuillez noter que la procédure de rattachement via le support technique nécessitera plus de temps car des vérifications sont nécessaires afin de nous assurer de votre lien avec l’organisation concernée.
              </p>
              <div class="row">
                  <div class="col-2">
                      <form action="/accounts/logout/" class="js-prevent-multiple-submit" method="post">
                          <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                          <button aria-label="Se déconnecter" class="btn btn-block btn-primary" type="submit">
                              <span>
                                  Se déconnecter
                              </span>
                          </button>
                      </form>
                  </div>
              </div>
          </div>
      </div>
  </div>
  
  '''
# ---
